# railfares

./: Access to employment centres.py  Figures_for_paper.py  IMD_fares_analysis.py  LICENSE  Number_of_reachable_hospitals_by_budget.py  README.md  access_to_hospitals.py  all_station_nlc_codes.json  isocosts.py  mean_price_change.csv  number_employment_centres_multiple_budgets.py  number_hospitals_100_pounds.csv  number_hospitals_10_pounds.csv  number_hospitals_125_pounds.csv  number_hospitals_150_pounds.csv  number_hospitals_175_pounds.csv  number_hospitals_200_pounds.csv  number_hospitals_25_pounds.csv  number_hospitals_50_pounds.csv  number_hospitals_75_pounds.csv  number_hospitals_multiple_budgets.py  number_large_employment_centres_100_pounds.csv  number_large_employment_centres_10_pounds.csv  number_large_employment_centres_125_pounds.csv  number_large_employment_centres_150_pounds.csv  number_large_employment_centres_175_pounds.csv  number_large_employment_centres_200_pounds.csv  number_large_employment_centres_25_pounds.csv  number_large_employment_centres_50_pounds.csv  number_large_employment_centres_75_pounds.csv  number_medium_employment_centres_100_pounds.csv  number_medium_employment_centres_10_pounds.csv  number_medium_employment_centres_125_pounds.csv  number_medium_employment_centres_150_pounds.csv  number_medium_employment_centres_175_pounds.csv  number_medium_employment_centres_200_pounds.csv  number_medium_employment_centres_25_pounds.csv  number_medium_employment_centres_50_pounds.csv  number_medium_employment_centres_75_pounds.csv  (+30 more)
dashboard/: app.py
(+29 files in other folders)
