[tool.poetry]
name = "railfares"
version = "0.1.0"
description = ""
authors = ["FedericoBotta <federico.botta@wbs.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
geopandas = "^0.11.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
spyder = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
