[tool.poetry]
name = "railfares"
version = "0.1.0"
description = ""
authors = ["FedericoBotta <federico.botta@wbs.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
geopandas = "^0.11.0"
matplotlib = "^3.5.2"
odfpy = "^1.4.1"
contextily = "^1.2.0"
folium = "^0.12.1"
alphashape = "^1.3.1"
Flask = "^2.2.2"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]
spyder = "^5.3.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
